--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,23 @@ JWT_ACCESS_SECRET=change-me-access-secret
 JWT_REFRESH_SECRET=change-me-refresh-secret
 JWT_ACCESS_EXPIRY_MINUTES=15
 JWT_REFRESH_EXPIRY_HOURS=168
+
+# Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+
+# MinIO
+MINIO_ENDPOINT=minio:9000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET=oculus
+MINIO_USE_SSL=false
+
+# Storage: "minio" or "local"
+STORAGE_MODE=local
+LOCAL_UPLOAD_PATH=./uploads
+
+# Telegram
+TELEGRAM_BOT_TOKEN=
