--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,18 @@ jobs:
             -path=/migrations \
             -database="postgres://${{ secrets.DB_USER }}:${{ secrets.DB_PASSWORD }}@postgres:5432/${{ secrets.DB_NAME }}?sslmode=disable" up
 
+      - name: Run seed (idempotent)
+        run: |
+          docker run --rm \
+            --network app-network \
+            -e "DB_HOST=postgres" \
+            -e "DB_PORT=5432" \
+            -e "DB_USER=${{ secrets.DB_USER }}" \
+            -e "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" \
+            -e "DB_NAME=${{ secrets.DB_NAME }}" \
+            -e "DB_SSLMODE=disable" \
+            "$IMAGE_NAME:${{ github.sha }}" ./seed
+
       - name: Stop old container
         run: docker stop $IMAGE_NAME 2>/dev/null || true
 
