Полная интеграция Telegram бота
Функционал для пациентов:
- /start <код> - привязка к карте пациента
- /status - проверка статуса подготовки
- Уведомления об изменении статуса
- Уведомления о назначении операции

Функционал для врачей:
- /register <email> - привязка аккаунта врача
- /mypatients - список пациентов врача
- Уведомления о новых пациентах
- Уведомления хирургам о пациентах на проверку

Технические изменения:
- Добавлено поле telegram_chat_id в таблицу users
- Миграция 000002_add_telegram_chat_id
- Расширен UserRepository (FindByChatID, Update)
- Интеграция бота в PatientService
- Автоматические уведомления при изменении статусов
- Токен бота в .env.example

--- a/.env.example
+++ b/.env.example
@@ -28,4 +28,4 @@ STORAGE_MODE=local
 LOCAL_UPLOAD_PATH=./uploads
 
 # Telegram
-TELEGRAM_BOT_TOKEN=
+TELEGRAM_BOT_TOKEN=8607427129:AAGVKxSfsPMkRj2vy7XwOgvSoLxyLBzvpZU
