--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,6 +120,7 @@ jobs:
             -e "DB_SSLMODE=disable" \
             -e "JWT_ACCESS_SECRET=${{ secrets.JWT_ACCESS_SECRET }}" \
             -e "JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }}" \
+            -e "TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }}" \
             -e "APP_PORT=8080" \
             -e "LOG_LEVEL=info" \
             "$IMAGE_NAME:${{ github.sha }}"
