--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,6 @@ LOCAL_UPLOAD_PATH=./uploads
 
 # Telegram
 TELEGRAM_BOT_TOKEN=8607427129:AAGVKxSfsPMkRj2vy7XwOgvSoLxyLBzvpZU
+
+# Base URL for frontend (used in Telegram bot links, emails, etc.)
+BASE_URL=https://beercut.tech
